Refactor file structure and update paths accordingly
Moved files from root directories to organized `_posts`, `_pages`, and `assets/js` folders. Updated all relevant file paths in HTML, JavaScript, and API fetch calls to reflect the new structure, ensuring consistent application functionality.

--- a/_pages/post.html
+++ b/_pages/post.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/favicon.ico">
-    <title>Blog Page</title>
+    <title>Blog Post</title>
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/blog.css">
+    <link rel="stylesheet" href="../css/post.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/15.0.6/marked.min.js" crossorigin="anonymous"></script>
-    <script src="../js/config.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
-    <script src="../js/blog.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <script src="../assets/js/config.js" defer></script>
+    <script src="../assets/js/navbar.js" defer></script>
+    <script src="../assets/js/post.js" defer></script>
+    <script src="../assets/js/footer.js" defer></script>
 </head>
 <body>
 <header>
-    <h1>Blog</h1>
     <div id="navbar-container"></div>
 </header>
 <main>
-    <div id="blog-posts"></div>
+    <article id="post-content"></article>
 </main>
 <div id="footer-container"></div>
 </body>
