--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>QuackieMackie's GitHub Page</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/config.js" defer></script>
-    <script src="/js/navbar.js" defer></script>
-    <script src="/js/footer.js" defer></script>
-    <script src="/js/repos-container.js" defer></script>
+    <script src="/assets/js/config.js" defer></script>
+    <script src="/assets/js/navbar.js" defer></script>
+    <script src="/assets/js/footer.js" defer></script>
+    <script src="/assets/js/repos-container.js" defer></script>
 </head>
 <body>
 <header>
@@ -23,7 +23,7 @@
         <h2>About Me</h2>
         <p>Welcome to my GitHub Page! Here, I plan on showcasing projects I am working on, ideas I think up, and completed projects.</p>
         <button onclick="window.location.href='https://github.com/QuackieMackie'">My GitHub</button>
-        <button onclick="window.location.href='./pages/blog.html'">Visit Blog</button>
+        <button onclick="window.location.href='_pages/blog.html'">Visit Blog</button>
     </section>
     <hr>
     <section id="repos">
