--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/favicon.ico">
-    <title>Blog Post</title>
+    <title>Blog Page</title>
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/post.css">
+    <link rel="stylesheet" href="../css/blog.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/15.0.6/marked.min.js" crossorigin="anonymous"></script>
-    <script src="../js/config.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
-    <script src="../js/post.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <script src="../assets/js/config.js" defer></script>
+    <script src="../assets/js/navbar.js" defer></script>
+    <script src="../assets/js/blog.js" defer></script>
+    <script src="../assets/js/footer.js" defer></script>
 </head>
 <body>
 <header>
+    <h1>Blog</h1>
     <div id="navbar-container"></div>
 </header>
 <main>
-    <article id="post-content"></article>
+    <div id="blog-posts"></div>
 </main>
 <div id="footer-container"></div>
 </body>
